assets/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${app_name}-deployment
  labels:
    app: ${app_name}
spec:
  replicas: ${replica}
  selector:
    matchLabels:
      app: ${app_name}
  template:
    metadata:
      labels:
        app: ${app_name}
    spec:
      containers:
      - name: ${app_name}
        image: ${image}
        ports:
        - containerPort: ${port}
